# spaceships

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/assets/json/: projectile_sprites.json  ship_sprites.json  simple_weapons.json
app/include/: parts.hpp
app/include/assets/: font_manager.hpp  object_sprite.hpp  paths.hpp  projectile_sprite.hpp  ship_sprite.hpp  sprite_manager.hpp  texture_manager.hpp
app/include/controls/: player_input.hpp  ship_orders.hpp
app/include/controls/controllers/: controller.hpp  enemy_controller.hpp  player_controller.hpp
app/include/core/: camera.hpp  game.hpp  menu.hpp  ship.hpp  ship_actor.hpp  ship_sprite.hpp
app/include/core/objects/: projectile.hpp  simple_projectile.hpp  space_object.hpp
app/include/logs/: logger.hpp
app/include/parts/: cores.hpp  factory.hpp  modules.hpp  part.hpp  signal.hpp  spaceship_core.hpp
app/include/parts/cores/: mouse_core.hpp  omni_core.hpp  ship_core.hpp  simple_core.hpp  spaceship_core.hpp
app/include/parts/modules/: centrifugal_slingshot.hpp  dummy_trigger_module.hpp  module.hpp  null_brake.hpp  simple_trigger_module.hpp  simple_weapon.hpp  simple_weapon_config.hpp  trigger_module.hpp  velocity_redirector.hpp
app/include/parts/modules/configs/: anchor.hpp  projectile_config.hpp  simple_projectile_config.hpp  simple_weapon_config.hpp
app/include/physics/: physics_object.hpp  physics_transform.hpp
app/include/physics/colliders/: collider.hpp  sphere_collider.hpp
app/include/utility/: angle.hpp  normalizer.hpp  normalizer.tpp  vec2d.hpp
app/src/: CMakeLists.txt  main.cpp
app/src/assets/: font_manager.cpp  object_sprite.cpp  paths.cpp  projectile_sprite.cpp  ship_sprite.cpp  sprite_manager.cpp  texture_manager.cpp
app/src/controls/: player_input.cpp  ship_orders.cpp
app/src/controls/controllers/: controller.cpp  enemy_controller.cpp  player_controller.cpp
app/src/core/: camera.cpp  game.cpp  menu.cpp  ship.cpp  ship_actor.cpp  ship_sprite.cpp
app/src/core/objects/: projectile.cpp  simple_projectile.cpp  space_object.cpp
app/src/logs/: logger.cpp
app/src/parts/: factory.cpp  part.cpp  signal.cpp
app/src/parts/cores/: mouse_core.cpp  omni_core.cpp  ship_core.cpp  simple_core.cpp  spaceship_core.cpp
app/src/parts/modules/: centrifugal_slingshot.cpp  dummy_trigger_module.cpp  module.cpp  null_brake.cpp  simple_trigger_module.cpp  simple_weapon.cpp  simple_weapon_config.cpp  trigger_module.cpp  velocity_redirector.cpp
app/src/parts/modules/configs/: anchor.cpp  projectile_config.cpp  simple_projectile_config.cpp  simple_weapon_config.cpp
app/src/physics/: physics_object.cpp  physics_transform.cpp
app/src/physics/colliders/: collider.cpp  sphere_collider.cpp
app/src/utility/: angle.cpp  vec2d.cpp
